# accountsystem

./: CMakeLists.txt  README.md  make.md
cmake/: Findspdlog.cmake
config/: app.json
include/jwt-cpp/: jwt.h
include/jwt-cpp/traits/: defaults.h.mustache
include/jwt-cpp/traits/danielaparker-jsoncons/: traits.h
include/jwt-cpp/traits/open-source-parsers-jsoncpp/: traits.h
lib/: libPocoActiveRecord.so.112  libPocoCrypto.so.112  libPocoDataMySQL.so.112  libPocoEncodings.so.112  libPocoJWT.so.112  libPocoPrometheus.so.112  libPocoRedis.so.112
lib/cmake/: CPackConfig.cmake  CPackSourceConfig.cmake
lib/cmake/Poco/: PocoActiveRecordTargets-relwithdebinfo.cmake  PocoCryptoTargets-relwithdebinfo.cmake  PocoDataMySQLTargets-relwithdebinfo.cmake  PocoDataMySQLTargets.cmake  PocoDataSQLiteTargets-relwithdebinfo.cmake  PocoDataTargets-relwithdebinfo.cmake  PocoDataTargets.cmake  PocoEncodingsTargets-relwithdebinfo.cmake  PocoFoundationConfigVersion.cmake  PocoFoundationTargets-relwithdebinfo.cmake  PocoFoundationTargets.cmake  PocoJSONTargets-relwithdebinfo.cmake  PocoJWTTargets-relwithdebinfo.cmake  PocoMongoDBTargets-relwithdebinfo.cmake  PocoNetSSLTargets-relwithdebinfo.cmake  PocoNetTargets-relwithdebinfo.cmake  PocoPrometheusTargets-relwithdebinfo.cmake  PocoRedisTargets-relwithdebinfo.cmake  PocoUtilTargets-relwithdebinfo.cmake  PocoXMLTargets-relwithdebinfo.cmake  PocoXMLTargets.cmake  PocoZipTargets-relwithdebinfo.cmake
lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
src/: CMakeLists.txt  main.cpp
src/controller/: base_request_handler.cpp  base_request_handler.h  change_password_handler.cpp  change_password_handler.h  delete_account_handler.cpp  delete_account_handler.h  get_account_handler.cpp  get_account_handler.h  login_handler.cpp  login_handler.h  not_found_handler.cpp  not_found_handler.h  oauth2_authorize_handler.cpp  oauth2_authorize_handler.h  register_handler.cpp  register_handler.h  request_handler_factory.cpp  request_handler_factory.h  rest_api_server.cpp  rest_api_server.h  update_account_handler.cpp  update_account_handler.h  verify_email_handler.cpp  verify_email_handler.h
src/model/: account.cpp  account.h
src/repository/: account_repository.h  in_memory_account_repository.cpp  in_memory_account_repository.h
src/service/: account_service.h  account_service_impl.cpp  account_service_impl.h  config_service.h  email_service.h  json_config_service.cpp  json_config_service.h  oauth2_service.h  oauth2_service_impl.cpp  oauth2_service_impl.h  service_container.h  service_registry.cpp  service_registry.h  smtp_email_service.cpp  smtp_email_service.h
src/util/: config_utils.cpp  config_utils.h  http_client.cpp  http_client.h  http_client_factory.cpp  http_client_factory.h  log.cpp  log.h  poco_http_client.cpp  poco_http_client.h  poco_http_client_factory.cpp  poco_http_client_factory.h  security_utils.cpp  security_utils.h
test/: CMakeLists.txt  account_test.cpp  test_account.cpp
